[tool.poetry]
name = "desafiopython"
version = "0.1.0"
description = ""
authors = ["PostboxRetinal <78338192+PostboxRetinal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
